<resources>
    <string name="app_name">Veil</string>

    <!-- menu items -->
    <string name="app_settings">App Settings</string>
    <string name="rightmesh_settings">RightMesh Settings</string>
    <string name="connected_peers">Connected Peers</string>

    <!-- menu bar items-->
    <string name="login_menu_title">Login</string>
    <string name="signup_menu_title">Signup</string>
    <string name="landing_menu_title">Landing Page</string>

    <!-- notification items -->
    <string name="by">by: </string>

    <!-- Sign up page titles-->
    <string name="email_title">Email Address</string>
    <string name="password_title">Password</string>
    <string name="password_conf_title">Confirm Password</string>
    <string name="first_name_title">First Name</string>
    <string name="last_name_title">Last Name</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="password_old_title">Current Password</string>
    <string name="password_new_title">New Password</string>
    <string name="password_conf_new_title">Confirm New Password</string>
    <string name="password_requirements_label">At least 8 characters long, 1 uppercase, 1 lowercase, 1 number, and 1 special character</string>

    <!-- Create Post strings -->
    <string name="title_title">Title</string>
    <string name="title_hint">A short title for your question.</string>
    <string name="tags_title">Tags</string>
    <string name="tags_hint">Select Tags</string>
    <string name="message_hint">Some more details about the question you wish to ask.</string>


    <!-- SnackBar messages -->
    <string name="password_required">Password is missing</string>
    <string name="password_mismatch">Passwords do not match</string>
    <string name="password_complexity">Passwords too simple</string>
    <string name="password_accepted">Password good</string>
    <string name="comment_too_short">The comment message too short.</string>
    <string name="missing_name">Name is missing</string>
    <string name="invalid_email">Invalid Email Address</string>
    <string name="username_pass_not_match">Invalid username or password</string>
    <string name="unknown_err">Unknown Error</string>
    <string name="failed_to_save_data">Can not save the data</string>

    <!-- General strings for use throughout the app -->
    <string name="done">Done</string>
    <string name="application_logo">Application Logo</string>
    <string name="rightmesh_credit">RightMesh Credit</string>
    <string name="enter">Enter</string>
    <string name="back">Back</string>
    <string name="username">Username</string>
    <string name="log_out">Log Out</string>
    <string name="save">Save</string>

    <!-- Error Messages -->
    <string name="failed_to_load_title">Failed to load title</string>
    <string name="failed_to_load_content">Failed to load content</string>
    <string name="error_initializing_the_library">Error initializing the library</string>

    <!-- Bundle keys -->
    <string name="post_object_key">post_object_key</string>
    <string name="user_object_key">user_object_key</string>
    <string name="post_list_key">post_list_key</string>

    <!-- Shared preferences keys -->
    <string name="pref_notifications">pref_notifications</string>
    <string name="pref_username">pref_username</string>
    <string name="pref_passwords">pref_passwords</string>

    <string name="placeholder_date">July 25, 2018</string>
    <string name="comments">Comments</string>
    <string name="ipsum_lorem_paragraph">Lorem ipsum dolor sit amet, harum quando mel ad. No usu graece perfecto interesset, eam vide consul pertinacia eu, suas labores percipit ius ne. No usu libris mucius, quo sonet iudicabit assueverit ei, ea dolore maiestatis quaerendum mea. Mel at congue elaboraret, nam viris voluptatibus eu. Ius dissentiet comprehensam te. Te ancillae petentium salutandi per, est no congue iriure.</string>
    <string name="placeholder_hash">hash Placeholder</string>
    <string name="title_place_holder">Title</string>
    <string name="author_name_place_holder">John Doe</string>
    <string name="preview_place_holder">Message Content</string>
    <string name="dash_color_description">background colour styling</string>
    <string name="profile_picture_description">Profile Picture</string>
    <string name="email_placeholder">placeholderemail@placeholder.com</string>
    <string name="name_placeholder">PLACEHOLDER NAME</string>
    <string name="discover_forums">Discover Forums</string>
    <string name="your_forums">Your Forums</string>
    <string name="view">View</string>
    <string name="full_name_placeholder">%s %s</string>
    <string name="remember_me_label">Remember username and password</string>
    <string name="add_a_comment">Add a comment</string>
    <string name="comment_hint">Add a comment about the post.</string>
    <string name="post">Post</string>
    <string name="anonymous">Anonymous</string>
    <string name="account_settings">Account Settings</string>
    <string name="full_name">Full Name</string>
    <string name="edit_button_content_description">Edit Button</string>
    <string name="new_email_label">New Email</string>
    <string name="change_email">Change Email</string>
    <string name="change_email_message">Please enter your new email</string>
    <string name="change_name">Change Name</string>
    <string name="change_name_message">Please enter your new name</string>
    <string name="edit">Edit</string>

    <!-- Settings Page Strings -->
    <string name="display_settings">Display Settings</string>
    <string name="notification_settings_header">Notification Settings</string>
    <string name="toggle_dark_mode">Toggle dark theme</string>
    <string name="dark_theme_option_description">Join the dark side</string>
    <string name="toggle_post_alerts">Toggle post alerts</string>
    <string name="toggle_post_alerts_description">Alert me if there are new posts</string>
    <string name="toggle_comment_alerts">Toggle Comment Alerts</string>
    <string name="toggle_comment_alerts_description">Alert me if there are new comments</string>
    <string name="system_settings_header">System Settings</string>
    <string name="toggle_memory_save">Memory Saver</string>
    <string name="toggle_memory_save_description">This mode removes older/inactive posts automatically to save disk space on your device. (Warning once a post is removed from your device you might not be able to get it back again.)</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="num_comments">Comments: %d</string>
    <string name="toggle_protocol_version">Sync Protocol Version 2</string>


    <string-array name="tag_list">
        <item>Select Tags</item>
        <item>Health</item>
        <item>Emergency</item>
        <item>Food</item>
        <item>Dog</item>
        <item>Cats</item>
        <item>Tech</item>
    </string-array>

    <string name="menu_sort_age_asc">new -> old</string>
    <string name="menu_sort_age_desc">old -> new</string>
    <string name="menu_sort_title_asc">title A -> Z</string>
    <string name="menu_sort_title_desc">title Z -> A</string>
    <string name="menu_sort_author_asc">author A -> Z</string>
    <string name="menu_sort_author_desc">author Z -> A</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>


    <string name="no_posts">No Posts</string>
    <string name="no_comments">No Comments</string>
    <string name="unread_content_description">Marks if a post is unread</string>
    <string name="add_comment_content_description">Add comment to post button</string>
    <string name="peer_list">PeerList</string>
    <string name="peers">Peers:</string>
    <string name="refresh">Refresh</string>



    <!-- Stats page -->
    <string name="protocol_v1">Protocol Version 1</string>
    <string name="protocol_v2">Protocol Version 2</string>
    <string name="num_packets">Number Packets: %d</string>
    <string name="total_size">Total Size: %d</string>
    <string name="average_size">Average Size: %f</string>
    <string name="total_entries_received">Total Received: %d</string>
    <string name="total_entries_stored">Total Stored: %d</string>
    <string name="num_peers">Number Peers: %d</string>
    <string name="slowest_time">Slowest time: %f s</string>
    <string name="fastest_time">Fastest time: %f s</string>
    <string name="average_time">Average time: %f s</string>
    <string name="num_packet_lost">Number Lost: %d</string>
    <string name="db_size">DB size: %f MB</string>
    <string name="hash_table_size">hash table size: %f MB</string>

    <!-- misc -->
    <string name="protect">Protect</string>
    <string name="delete">Delete</string>
    <string name="stats">stats</string>
    <string name="db_management">DB Management</string>
    <string name="clear_logs">Clear Logs</string>
    <string name="clear_posts">Clear Posts</string>
    <string name="clear_peers">Clear Peers</string>


</resources>
