<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/account_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="33dp"
        android:text="@string/account_settings"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/account_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/full_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_title"
        app:layout_constraintVertical_bias="0.06999999"/>

    <TextView
        android:id="@+id/account_email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/email_title"
        app:layout_constraintStart_toStartOf="@+id/account_name_label"
        app:layout_constraintTop_toBottomOf="@+id/account_name_label"/>

    <TextView
        android:id="@+id/account_password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/password_title"
        app:layout_constraintStart_toStartOf="@+id/account_email_label"
        app:layout_constraintTop_toBottomOf="@+id/account_email_label"/>

    <TextView
        android:id="@+id/account_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="92dp"
        android:layout_marginStart="92dp"
        android:text="@string/full_name_placeholder"
        app:layout_constraintBottom_toBottomOf="@+id/account_name_label"
        app:layout_constraintStart_toEndOf="@+id/account_name_label"
        app:layout_constraintTop_toTopOf="@+id/account_name_label"
        app:layout_constraintVertical_bias="0.0"/>

    <TextView
        android:id="@+id/account_email_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_placeholder"
        app:layout_constraintBottom_toBottomOf="@+id/account_email_label"
        app:layout_constraintStart_toStartOf="@+id/account_name_text"
        app:layout_constraintTop_toTopOf="@+id/account_email_label"/>

    <TextView
        android:id="@+id/account_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:text="@string/password_title"
        app:layout_constraintBottom_toBottomOf="@+id/account_password_label"
        app:layout_constraintStart_toStartOf="@+id/account_email_text"
        app:layout_constraintTop_toTopOf="@+id/account_password_label"/>

    <ImageButton
        android:id="@+id/account_name_edit"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:background="@android:drawable/ic_menu_edit"
        app:layout_constraintBottom_toBottomOf="@+id/account_name_text"
        app:layout_constraintStart_toEndOf="@+id/account_name_text"
        app:layout_constraintTop_toTopOf="@+id/account_name_text"
        android:contentDescription="@string/edit_button_content_description"/>

    <ImageButton
        android:id="@+id/account_email_edit"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:background="@android:drawable/ic_menu_edit"
        app:layout_constraintBottom_toBottomOf="@+id/account_email_text"
        app:layout_constraintStart_toEndOf="@+id/account_email_text"
        app:layout_constraintTop_toTopOf="@+id/account_email_text"
        android:contentDescription="@string/edit_button_content_description"/>

    <ImageButton
        android:id="@+id/account_password_edit"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:background="@android:drawable/ic_menu_edit"
        app:layout_constraintBottom_toBottomOf="@+id/account_password_text"
        app:layout_constraintStart_toEndOf="@+id/account_password_text"
        app:layout_constraintTop_toTopOf="@+id/account_password_text"
        android:contentDescription="@string/edit_button_content_description"/>

</android.support.constraint.ConstraintLayout>